string interpolation - as like echo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     
-    <div id="app">{{ msg }}</div>
+    <div id="app">
+        <p> Hello {{ man.name }}</p>
+        <p>{{ man.age }}</p>
+    </div>
     
     <script src="app.js"></script>
   </body>
