--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <div id="app">
         <p> Hello {{ man.name }}</p>
-        <p>{{ man.age }}</p>
+        <a v-bind:href="man.link">Linking here</a>
     </div>
     
     <script src="app.js"></script>
