--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <body>
     
     <div id="app">
-        <p> Hello {{ man.htmlCode }}</p> // wrong way 
-        <p v-html="man.htmlCode"></p>  // right way 
+        <h3>{{ getCurrentTime() }}</h3>
     </div>
     
     <script src="app.js"></script>
