--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     
     <div id="app">
         <p> counter: {{ count }}</p>
-        <!-- <button v-on:click="increament">Increament</button>     // right way -->
 
-        <button v-on:click="increament()">Increament</button>       // also right way
-        <button v-on:click="decreament">Decreament</button>
+        <button v-on:click="increament(1)">Increament1</button>     
+        <button v-on:click="decreament(1)">Decreament1</button>
+
+        <button v-on:click="increament(2)">Increament2</button>     
+        <button v-on:click="decreament(2)">Decreament2</button>
     </div>
     
     <script src="app.js"></script>
