--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="app">
         <p> counter: {{ count }}</p>
 
-        <button @click="increament(1)">Increament1</button>     
+        <button @click="increament($event, 1)">Increament1</button>     
         <button @click="decreament(1)">Decreament1</button>
 
         <button @click="increament(2)">Increament2</button>     
