Template Property Using

--- a/index.html
+++ b/index.html
@@ -10,14 +10,8 @@
 <body>
     
     <div id="app">
-
-       <button @click="a++">A+</button>
-       <button @click="b--">B-</button>
-
-       <p>{{ aToB }}</p>
-       <p>{{ bToB }}</p>
-
-    </div>
+    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos vel necessitatibus quisquam eum laborum, quasi accusamus perferendis nihil cupiditate fuga ipsam aliquid, similique, consequuntur quod repellendus sed tempore vero molestias?</p>
+   </div>
     
     <script src="app.js"></script>
   </body>
