--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,19 +9,18 @@
     <script src="vue.js"></script>
 </head>
 <body>
-    
-  <!-- Two Way Binding - Has Two Way // <input :value="number" @input="handleInput" type="text">  -->
 
     <div id="app">
-      <h3>Enter a Number:</h3>
-      <!-- <input :value="number" @input="handleInput" type="text"> <br> <br> -->
-      <input v-model.number="number" type="text"> <br> <br>  <!-- v-model will get string - Make it Interger -->
-      <button @click="getDouble">Get Double</button>
-      <button @click="getSquare">Get Square</button>
-      <button @click="reset">Reset</button>
 
-      <h4>Entered Number:</h4> <b>{{number}}</b>
-      <h4>Entered Result:</h4> <b>{{result}}</b>
+      <button :class="{active: activeClass == 'red', bold: true}"  @click="setClass('red')">Red</button>
+      <button :class="{active: activeClass == 'green', bold:true}" @click="setClass('green')">Green</button>
+      <button :class="{active: activeClass == 'blue', bold: true}" @click="setClass('blue')">Blue</button>
+      <button :class="['bold',{active: activeClass == 'green', bold: true}]">Always Active</button> 
+
+      <div :class="activeClass">
+
+      </div>
+
    </div>
     
     <script src="app.js"></script>
